# dbt-duckdb

./: .gitignore  .mock-uc-server-stats.yml  .pre-commit-config.yaml  AUTHORS  CHANGELOG.md  CONTRIBUTING.md  ChangeLog  Questions.md  README.md  dev-requirements.txt  pytest.ini  setup.cfg  setup.py  test_delta.ipynb  tox.ini  zensical.toml
.claude/: settings.local.json
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: docs.yml  main.yml  nightly.yml  release.yml
.kiro/specs/s3-tables-schema-evolution-no-drop/: design.md  requirements.md  tasks.md
dbt/adapters/: __init__.py
dbt/adapters/duckdb/: __init__.py  __version__.py  aws_session.py  buenavista.py  cli.py  column.py  connections.py  constants.py  credential_provider.py  credentials.py  delta.py  environments.py  extension.py  glue.py  iceberg.py  iceberg_utils.py  impl.py  relation.py  secrets.py  util.py  utils.py
dbt/adapters/duckdb/credentials/: s3_credential_provider.py
dbt/adapters/duckdb/emulate/: snowflake.py
dbt/adapters/duckdb/environments/: __init__.py  buenavista.py  local.py  motherduck.py  motherduck_pg_endpoint.py  quack.py
dbt/adapters/duckdb/plugins/: __init__.py  delta.py  duckdb_native.py  excel.py  glue.py  gsheet.py  iceberg.py  motherduck.py  native.py  pd_utils.py  postgres.py  postgres_scanner.py  sqlalchemy.py  sqlglot.py  unity.py
dbt/include/: __init__.py
dbt/include/duckdb/: dbt_project.yml  sample_profiles.yml
dbt/include/duckdb/macros/: adapters.sql  catalog.sql  columns.sql  incremental_helper.sql  merge.sql  persist_docs.sql  seed.sql  snapshot_helper.sql  snapshot_merge.sql
docs/: custom-plugins.md  index.md  installation.md  interactive-shell.md  python-models.md  table-function.md  table-materialization-drift.md
docs/configuration/: databases.md  extensions.md  index.md  motherduck.md  plugins.md
docs/external-files/: reading.md  writing.md
docs/incremental/: index.md  merge.md
scripts/: build-dist.sh  mock-uc-server.sh  test-unity.sh
test/: duckdb.dbtspec
tests/: bv_test_server.py  conftest.py  create_function_plugin.py  ducklake.py  quack_test_server.py
tests/functional/adapter/: test_attach.py  test_basic.py  test_caching.py  test_changing_relation_type.py  test_community_extensions.py  test_concurrency.py  test_constraints.py  test_database_type.py  test_ducklake_features.py  test_ducklake_partitioned_by.py  test_ducklake_partitioned_by_integration.py  test_ducklake_sorted_by.py  test_ducklake_sorted_by_integration.py  test_empty.py  test_ephemeral.py  test_external.py  test_external_rematerialize.py  test_filesystems.py  test_get_columns_in_relation.py  test_hooks.py  test_iceberg_lakekeeper_integration.py  test_incremental.py  test_incremental_microbatch.py  test_parameterized_view.py  test_persist_docs.py  test_persist_docs_transaction_behavior.py  test_python_model.py  test_quack.py  test_rematerialize.py  test_simple_snapshot.py  test_sources.py  test_table_function.py  test_unit_testing.py  test_utils.py  test_write_options.py
tests/functional/adapter/aliases/: test_aliases.py
tests/functional/adapter/indexes/: fixtures.py  test_indexes.py
tests/functional/adapter/simple_seed/: test_fast_seed.py  test_simple_seed.py
tests/functional/adapter/store_test_failures_tests/: test_store_test_failures.py
tests/functional/fsspec/: test_filesystems.py
tests/functional/plugins/: test_delta.py  test_delta_write.py  test_excel.py  test_glue.py  test_gsheet.py  test_iceberg.py  test_motherduck.py  test_motherduck_attach.py  test_motherduck_attach_path.py  test_motherduck_attach_settings.py  test_motherduck_saas_mode.py  test_mysql.py  test_native.py  test_plugins.py  test_postgres.py  test_segfault.py  test_sqlalchemy.py  test_sqlglot.py  test_sqlite.py  test_unity.py  utils.py
tests/integration/: test_integration.py
tests/unit/: test_column.py  test_connections.py  test_credentials.py  test_data_path_quoting.py  test_duckdb_adapter.py  test_duckdb_relation.py  test_external_utils.py  test_get_column_schema.py  test_glue.py  test_motherduck_pg_endpoint.py  test_partition_render.py  test_quack.py  test_retries.py  test_retries_connect.py  test_retries_query.py  test_secrets.py  test_sql_injection.py  utils.py
tests/unit/credentials/: test_credential_provider.py
(+46 files in other folders)
