[metadata]
name = dbt-duckdb
author = Josh Wills
author_email = joshwills+dbt@gmail.com
url = https://github.com/jwills/dbt-duckdb
summary = The duckdb adapter plugin for dbt (data build tool)
description_file = README.md
long_description_content_type = text/markdown
license = Apache-2
classifier =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: Apache Software License
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
keywords =
    setup
    distutils

[options]
install_requires=
    dbt-common>=1,<2
    dbt-adapters>=1,<2
    duckdb>=1.0.0
    tenacity>=7.0.0
    # add dbt-core to ensure backwards compatibility of installation, this is not a functional dependency
    dbt-core>=1.8.0
python_requires = >=3.8
include_package_data = True
packages = find_namespace:

[options.packages.find]
include =
    dbt
    dbt.*

[build-system]
requires = ["setuptools >= 61.2", "pbr>=1.9"]

[extras]
glue =
    boto3
    mypy-boto3-glue
unity =
    unitycatalog==0.1.1
    deltalake==0.18.2
    pyarrow==17.0.0
delta =
    deltalake==0.18.2
    pyarrow==17.0.0

[files]
packages =
    dbt-duckdb
